force-app/main/default/objects/custom_create34__c/custom_create34__c.object-meta.xml
<CustomObject>
    <label>Custom created object34</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects34</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>