force-app/main/default/objects/custom_create34__c/fields/custom_create_34field544__c.field-meta.xml
<CustomField>
    <fullName>custom_create_34field544__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 34field544</label>
    <type>Checkbox</type>
</CustomField>